tcm/ht/blog-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: blog-web-dev
  namespace: dev  # namespace where the gateway is deployed
  labels:
    app: blog-web
spec:
  parentRefs:
  - name: blog-web-gateway
  hostnames: 
  - hello-world.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: blog-web-service-dev
      port: 80
      # weight: 100
